<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/s1"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/symptomLabel"
        android:layout_width="290dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="120dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="#1D2020"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="52dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:text="@string/Yes"
        android:textAlignment="center"
        android:textColor="#2D2926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomLabel" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="45dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/No"
        android:textAlignment="center"
        android:textColor="#2D2926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>